@@ -1,5 +1,12 @@
 2008-06-06  Vincent Untz  <vuntz@gnome.org>
 
+	* libpanel-util/panel-dbus-service.[ch]: rename
+	panel_dbus_service_init_service to panel_dbus_service_define_service
+	* panel-power-manager.c: (panel_power_manager_constructor): updated for
+	this change
+
+2008-06-06  Vincent Untz  <vuntz@gnome.org>
+
 	* panel-power-manager.[ch]: rename panel_get_power_manager() to
 	panel_power_manager_get()
 	* panel-logout.c: (panel_logout_init): updated for this change
